Fix app/page overflow

--- a/app/assets/sass/components/app/__content/_app__content.sass
+++ b/app/assets/sass/components/app/__content/_app__content.sass
@@ -1,2 +1,3 @@
 &__content
-  padding: 65px 100px 0
+  height: calc(100% - var(--app-header-width) - var(--app-content-padding-top))
+  padding: var(--app-content-padding-top) 100px 0
