--- a/app/assets/sass/components/app/_app.sass
+++ b/app/assets/sass/components/app/_app.sass
@@ -1,6 +1,7 @@
 .app
   display: flex
   height: 100%
+  overflow: hidden
 
   // Elements
   @import "__aside/app__aside"
