--- a/app/assets/sass/core/_variables.sass
+++ b/app/assets/sass/core/_variables.sass
@@ -10,6 +10,7 @@
   // App
   --app-header-width: 80px
   --app-aside-height: var(--app-header-width)
+  --app-content-padding-top: 65px
   // Form
   --form-group-margin: 20px
   --form-error-margin: var(--form-group-margin)
